syntax = "proto3";

option java_multiple_files = true;
option java_package = "socialmedia.proto";

package socialmedia;

service UserRegistrationService {
    rpc RegisterUser (RegisterUserRequest) returns (User) {}
    rpc PostPost (PostPostRequest) returns (Post) {}
    rpc GetFeedFrom (GetFeedFromRequest) returns (Feed) {}
}

message RegisterUserRequest {
    string name = 1;
    string email = 2;;
}

message PostPostRequest {
    string content = 1;
    string image = 2;
    string date = 3;
    string author = 4;
}

message GetFeedFromRequest {
    string email = 1;
}

message User {
    string name = 1;
    string email = 2;
}

message Post {
    string content = 1;
    string image = 2;
    string date = 3;
    string author = 4;
}

message Feed {
    repeated Post posts = 1;
}

